syntax = "proto3";

//包名
option java_package = "com.ziapple.server.rpc";
//生成的类名
option java_outer_classname = "ClusterProto";

package cluster;

// 定义服务
service ClusterService {
  rpc handleMsg (stream MsgRequest) returns (stream MsgResponse) {}
}

message MsgRequest {
    string msgType = 1;
    string payload = 2;
}

message MsgResponse {
    string status = 1;
}
