/**
 * Copyright © 2016-2020 The Thingsboard Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package cluster;

option java_package = "com.ziapple.server.gen.cluster";
option java_outer_classname = "ClusterAPIProtos";

// 定义一个RPC服务，stream标识是一个流，不断的接收消息
service ClusterRpcService {
  rpc handleMsgs(stream ClusterMessage) returns (stream ClusterMessage) {}
}

// 集群消息
message ClusterMessage {
  MessageType messageType = 1;
  MessageMataInfo messageMetaInfo = 2;
  ServerAddress serverAddress = 3;
  bytes payload = 4;
}

// 目标服务器地址
message ServerAddress {
  string host = 1;
  int32 port = 2;
}

// 消息元信息
message MessageMataInfo {
  string payloadMetaInfo = 1;
  repeated string tags = 2;
}

// 消息类型
enum MessageType {
  // 模拟查账
  CLUSTER_GET_MESSAGE = 0;
  // 模拟转账
  CLUSTER_TRANSFER_MESSAGE = 1;
}